Parallelize code computation of refactored methods